tests/snapshots/examples_fixtures/suggestions__no_match.snap
---
source: tests/examples_fixtures_snapshots.rs
---
Fixture: examples/suggestions/no_match.flx
== compile ==
failed (compile)
== diagnostics ==
--> compiler error[E413]: TOP-LEVEL EFFECT

Effectful operation is not allowed at top level (requires: IO).

  --> examples/suggestions/no_match.flx:8:1
  |
8 | print(zebra);
  | ^^^^^^^^^^^^^
  | ------------- top-level effectful expression

Hint:
  Move this code into `fn main() with ... { ... }`.


--> compiler error[E414]: MISSING MAIN FUNCTION

Effectful program is missing `fn main` root effect handler.

  --> examples/suggestions/no_match.flx:8:1
  |
8 | print(zebra);
  | ^^^^^^^^^^^^^
  | ------------- effectful top-level execution

Hint:
  Define `fn main() with ... { ... }` and move execution there.


--> compiler error[E004]: UNDEFINED VARIABLE

I can't find a value named `zebra`.

  --> examples/suggestions/no_match.flx:8:7
  |
8 | print(zebra);
  |       ^^^^^

Hint:
  Define it first: let zebra = ...;

Found 3 errors.
== stdout ==
<not executed>
